# prismo

./: meson.build  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yaml  push.yaml
docs/: index.md
docs/advanced/: custom_hardware.md  magnify.md
docs/api/: controller.md
docs/core/: config_control.md  experiment.md  image_acq.md
examples/: prog_example.ipynb  setup6.ipynb
src/prismo/: Untitled.ipynb  __init__.py  control.py  gui.py  lumencor.py  main.cpp  notebook_demo.ipynb  test_tiles.ipynb  units.py  widgets.py
src/prismo/devices/: __init__.py  asi.py  bsi.py  demo.py  fluidic.py  lambda.py  lumencor.py  manual.py  meson.build  microfluidic.py  protocols.py  sutter.py  ti.py  ti2.py  zyla.py
src/prismo/devices/fluidic/: fluidic.py  packet.py
src/prismo/devices/fluigent/: __init__.py  exceptions.py  fluigent.py  low_level.py
src/prismo/devices/thor/: __init__.py  meson.build  thor.py  thor_lib.cpp  thor_light.cpp
src/prismo/devices/thor_light/: TLUP.h  __init__.py  meson.build  thor_light.cpp
src/prismo/devices/utils/: __init__.py  fourblock.py  general.py  twoblock.py
src/prismo/utils/: __init__.py  fourblock.py  general.py  twoblock.py
