[project]
name = "prismo"
version = "0.0.1"
description = "A microscopy image acquisition toolkit."
authors = [
    {name = "Karl Krauth", email = "karl.krauth@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.8, <3.14"

dependencies = [
    "multiprocess>=0.70.0",
    "napari>=0.5.0",
    "pybind11>=2.13.5",
    "pymmcore",
    "pymodbus>=3.9.0",
    "xarray[io]>=2025.01.0",
    "zarr>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = ["docs", "tests", "examples", "static"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
python_version = "3.10"

# Disallow untyped definitions.
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true

# None and optional handling
no_implicit_optional = true

# Configuring warnings
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_redundant_casts = true

# Misc things
strict_equality = true

# Config file
warn_unused_configs = true

ignore_missing_imports = true
